--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/aball6412/trading#readme",
   "dependencies": {
+    "ejs": "^2.4.2",
     "express": "^4.14.0"
   }
 }
